Downgrade to MC 1.20.4 and Java 17